# factored-scaling-curves

./: .gitignore  .gitmodules  LICENSE  README.md  eval_peg_pull.sh  eval_pick_place.sh  get_best_ckpt.sh  get_sim_curves.sh  plot_curve.py  process_data.sh  pyproject.toml  submit_dp_jobs.py  submit_pi0_jobs.py  train.sh
cfg/: real_drawer_pi0_spatial_group.yaml  real_pick_dp_visual_1factor.yaml  real_pick_dp_visual_1factor_factor.yaml  real_pick_dp_visual_2factor.yaml  real_towel_pi0_spatial_group.yaml  real_towel_pi0_visual_group.yaml  sim_peg_insertion_dp_spatial_group.yaml  sim_peg_insertion_dp_spatial_group_ablation.yaml  sim_peg_insertion_dp_visual_1factor.yaml  sim_peg_insertion_dp_visual_2factor.yaml  sim_peg_insertion_dp_visual_group.yaml  sim_peg_insertion_dp_visual_group_ablation_300.yaml  sim_pick_dp_visual_1factor.yaml  sim_pick_dp_visual_2factor.yaml  sim_pick_dp_visual_group.yaml  sim_pick_dp_visual_group_dataset_ablation1.yaml  sim_pick_dp_visual_group_dataset_ablation2.yaml  sim_pull_dp_spatial_group.yaml  sim_pull_dp_visual_1factor.yaml  sim_pull_dp_visual_2factor.yaml  sim_pull_dp_visual_group.yaml
data/eval_poses/: eval_base_delta_qpos_file_60.npy  eval_base_delta_qpos_file_peg_60.npy  eval_base_delta_qpos_file_pull_60.npy  eval_base_goal_poses_file_60.npy  eval_base_goal_poses_file_peg_60.npy  eval_base_goal_poses_file_pull_60.npy  eval_base_manip_poses_file_60.npy  eval_base_manip_poses_file_peg_60.npy  eval_base_manip_poses_file_pull_60.npy  eval_factor_delta_qpos_file_600.npy  (+10 more)
scripts/: emb_distance.py  eval.py  run.py  set_path.sh  val_loss.py
(+87 files in other folders)
